--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,9 @@
 <body>
     
     <!-- Header -->
-    <header class="header"></header>
+    <header class="header">
+        
+    </header>
 
     <!-- Wrapper -->
     <div class="wrapper">
