--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <header class="header">
 
         <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-primary menu">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-primary shadow-sm rounded menu">
             <div class="container">
 
                 <!-- Logo -->
@@ -114,7 +114,84 @@
     <div class="wrapper">
 
         <!-- Main -->
-        <main class="main"></main>
+        <main class="main">
+
+            <!-- Top Section -->
+            <section class="top" id="home">
+                <div class="container">
+
+                    <!-- First block -->
+                    <div class="row top__content justify-content-between">
+                        <div class="col-md-6 top__content">
+                            <div class="top__content-block mt-5 pt-4">
+
+                                <h1 class="top__content-title">
+                                    <p class="top__content-par">
+                                        Luftkondensierte
+                                    </p>
+                                    <p class="top__content-par">
+                                        Kältemaschinen
+                                    </p>
+                                    <p class="top__content-par">
+                                        & Kaltwassersätze
+                                    </p>
+                                </h1>
+                                <div class="line"></div>
+                                <div class="top__content-desc">
+                                    Aufgrund der kompakten Bauart werden platzsparende luftkondensierte
+                                    Kompressionskältemaschinen
+                                    (umgangsspr. „Kaltwassersätze“) vielseitig zur
+                                    Prozesskühlung und Gebäudeklimatisierung eingesetzt.
+                                </div>
+                                <div class="line"></div>
+
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <img class="top__content-img half-img" src="images/Air-Colled-Chillers.png" alt="image">
+                        </div>
+                    </div>
+                    <!-- == -->
+
+
+                    <!-- Second block -->
+                    <div class="row top__content mt-3 pt-3 pb-5 mb-2 justify-content-between">
+                        <div class="col-md-6">
+                            <img class="top__content-img" src="images/Refrigeration-Systems.png" alt="image">
+                        </div>
+
+                        <div class="col-md-5 top__content">
+                            <div class="top__content-block second-block mt-3 pt-3">
+
+                                <h1 class="top__content-title half">
+                                    ENERGIEEFFIZIENZ IM FOKUS
+                                </h1>
+                                <div class="top__content-desc second-desc ">
+                                    <p class="top__content-paragraph">
+                                        Bei der Anschaffung sollte deshalb besonders auf <span>energieeffiziente Systeme</span> geachtet
+                                        werden, denn die Betriebskoste n der Anlage überschreiten
+                                        erfahrungsgemäß über die Lebensdauer hinweg die einmaligen Anschaffungskosten um ein
+                                        vielfaches.
+                                    </p>
+
+                                    <p class="top__content-paragraph">
+                                        Insofern sind die Themen Kompressortechnik und Einsatz von Freikühlung von
+                                        besonderer Bedeutung, sowie Steuer- und Regelungstechnik besonders wichtig.
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- == -->
+
+                </div>
+            </section>
+            <!-- == -->
+
+        </main>
+        <!-- == -->
 
         <!-- Footer -->
         <footer class="footer"></footer>
