--- a/app/index.html
+++ b/app/index.html
@@ -169,9 +169,11 @@
                                 </h1>
                                 <div class="top__content-desc second-desc ">
                                     <p class="top__content-paragraph">
-                                        Bei der Anschaffung sollte deshalb besonders auf <span>energieeffiziente Systeme</span> geachtet
+                                        Bei der Anschaffung sollte deshalb besonders auf <span>energieeffiziente
+                                            Systeme</span> geachtet
                                         werden, denn die Betriebskoste n der Anlage überschreiten
-                                        erfahrungsgemäß über die Lebensdauer hinweg die einmaligen Anschaffungskosten um ein
+                                        erfahrungsgemäß über die Lebensdauer hinweg die einmaligen Anschaffungskosten um
+                                        ein
                                         vielfaches.
                                     </p>
 
@@ -187,6 +189,47 @@
                     <!-- == -->
 
                 </div>
+            </section>
+            <!-- == -->
+
+
+            <!-- Standarts Section -->
+            <section class="standarts" id="standarts">
+
+                <div class="container-fluid">
+
+                    <div class="row align-items-center standarts__content">
+                        <div class="col-6 standarts__content-column">
+                            <img class="standarts__content-img" src="./images/building.png" alt="image">
+                        </div>
+
+                        <div class="col-4 standarts__content-column">
+                            <div class="standarts__content">
+                                <h1 class="standarts__content-title mt-5">
+                                    MODERNSTE STANDARDS
+                                </h1>
+
+                                <div class="standarts__content-desc">
+                                    <p class="standarts__content-text">
+                                        Aktuelle Richtlinien und Verordnungen bezüglich des <span>Kältemittel
+                                            Phase-Downs</span> müssen
+                                        berücksichtigt werden. Der langfristige Einsatz des Kältemittels muss sowohl nach
+                                        ökonomischen als auch strategischen Gesichtspunkten entschieden werden.
+                                    </p>
+                                    <p class="standarts__content-text">
+                                        Alle unsere Kältemaschinen entsprechen dem modernsten Stand der Technik und werden
+                                        in den unterschiedlichsten Branchen eingesetzt. Unser Angebot umfasst ein 
+                                        <span>breites Sortiment an natürlichen und frigenen Kältemitteln</span>,
+                                        die den aktuellsten Normen und Verordnungen entsprechen.
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </section>
             <!-- == -->
 
