--- a/app/index.html
+++ b/app/index.html
@@ -235,6 +235,7 @@
             </section>
             <!-- == -->
 
+
             <!-- Temperature Section -->
             <section class="temperature" id="temperature">
                 <div class="container-fluid">
@@ -284,6 +285,136 @@
 
                     <!-- Image -->
                     <img class="temperature__image" src="./images/IconHotToCold.png" alt="image">
+                    <!-- == -->
+
+                </div>
+            </section>
+            <!-- == -->
+
+
+            <!-- Vorteile -->
+            <section class="vorteile bg-secondary" id="vorteile">
+                <div class="container">
+
+                    <!-- Title -->
+                    <div class="row">
+                        <div class="col-12 text-lg-center">
+                            <h1 class="vorteile__title">IHRE VORTEILE</h1>
+                        </div>
+                    </div>
+                    <!-- == -->
+
+                    <!-- Items -->
+                    <div class="row">
+                        <div class="col-6 col-sm-4 vorteile__column">
+                            <div class="alert alert-primary d-flex align-items-center vorteile__item">
+
+                                <img class="vorteile__item-image" src="./images/icons/icon-1.png" alt="icon">
+
+                                <p class="vorteile__item-info">Geringe Stellfläche</p>
+
+                            </div>
+                        </div>
+
+                        <div class="col-6 col-sm-4 vorteile__column">
+                            <div class="alert alert-primary d-flex align-items-center vorteile__item">
+
+                                <img class="vorteile__item-image" src="./images/icons/icon-2.png" alt="icon">
+
+                                <p class="vorteile__item-info">Mit und ohne integrierter Freikühlung</p>
+
+                            </div>
+                        </div>
+
+                        <div class="col-6 col-sm-4 vorteile__column">
+                            <div class="alert alert-primary d-flex align-items-center vorteile__item">
+
+                                <img class="vorteile__item-image" src="./images/icons/icon-3.png" alt="icon">
+
+                                <p class="vorteile__item-info">Für Außentemperaturen bis +55°C</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-6 col-sm-4 vorteile__column">
+                            <div class="alert alert-primary d-flex align-items-center vorteile__item">
+
+                                <img class="vorteile__item-image" src="./images/icons/icon-4.png" alt="icon">
+
+                                <p class="vorteile__item-info">Für Außen- und Innenaufstellung erhältlich</p>
+
+                            </div>
+                        </div>
+
+                        <div class="col-6 col-sm-4 vorteile__column">
+                            <div class="alert alert-primary d-flex align-items-center vorteile__item">
+
+                                <img class="vorteile__item-image" src="./images/icons/icon-5.png" alt="icon">
+
+                                <p class="vorteile__item-info">Betriebsbereit bei Anlieferung</p>
+
+                            </div>
+                        </div>
+
+                        <div class="col-6 col-sm-4 vorteile__column">
+                            <div class="alert alert-primary d-flex align-items-center vorteile__item">
+
+                                <img class="vorteile__item-image" src="./images/icons/icon-6.png" alt="icon">
+
+                                <p class="vorteile__item-info">Automatische Freikühlschaltung für verringerten Energieverbrauch</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-6 col-sm-4 vorteile__column">
+                            <div class="alert alert-primary d-flex align-items-center vorteile__item">
+
+                                <img class="vorteile__item-image" src="./images/icons/icon-7.png" alt="icon">
+
+                                <p class="vorteile__item-info">Robustes Gehäuse für Außenaufstellung</p>
+
+                            </div>
+                        </div>
+
+                        <div class="col-6 col-sm-4 vorteile__column">
+                            <div class="alert alert-primary d-flex align-items-center vorteile__item">
+
+                                <img class="vorteile__item-image" src="./images/icons/icon-8.png" alt="icon">
+
+                                <p class="vorteile__item-info">Geringe Schallemissionen</p>
+
+                            </div>
+                        </div>
+
+                        <div class="col-6 col-sm-4 vorteile__column">
+                            <div class="alert alert-primary d-flex align-items-center vorteile__item">
+
+                                <img class="vorteile__item-image" src="./images/icons/icon-9.png" alt="icon">
+
+                                <p class="vorteile__item-info">Wetterfest und Langlebig</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-6 col-sm-4 vorteile__column">
+                            <div class="alert alert-primary d-flex align-items-center vorteile__item">
+
+                                <img class="vorteile__item-image" src="./images/icons/icon-10.png" alt="icon">
+
+                                <p class="vorteile__item-info">Robustes Gehäuse für Außenaufstellung</p>
+
+                            </div>
+                        </div>
+                    </div>
                     <!-- == -->
 
                 </div>
