--- a/app/index.html
+++ b/app/index.html
@@ -607,6 +607,56 @@
             </section>
             <!-- == -->
 
+
+            <!-- Carousel Section -->
+            <section class="bilder bg-secondary" id="bilder">
+                <div class="container">
+
+                    <!-- Title -->
+                    <div class="row text-lg-center">
+                        <h1 class="bilder__title">Bilder</h1>
+                    </div>
+                    <!-- == -->
+
+                    <!-- Carousel -->
+                    <div class="row">
+
+                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner bilder__inner">
+                              <div class="carousel-item bilder__item active">
+                                <img src="./images/slide.png" class="d-block" alt="image">
+                              </div>
+                              <div class="carousel-item bilder__item">
+                                <img src="./images/slide.png" class="d-block" alt="image">
+                              </div>
+                              <div class="carousel-item bilder__item">
+                                <img src="./images/slide.png" class="d-block" alt="image">
+                              </div>
+                            </div>
+                            <div class="bilder__nav">
+                                <div class="carousel-indicators bilder__indicators">
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="bilder__dots active" aria-current="true" aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="bilder__dots" aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="bilder__dots" aria-label="Slide 3"></button>
+                                </div>
+                                <button class="btn bg-primary bilder__btn" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                    <img src="./images/arrow-left.png" alt="arrow">
+                                </button>
+                                <button class="btn bg-primary bilder__btn" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                    <img src="./images/arrow-right.png" alt="arrow">
+                                </button>
+                            </div>
+                          </div>
+
+                    </div>
+                    <!-- == -->
+
+                    
+
+                </div>
+            </section>
+            <!--  -->
+
         </main>
         <!-- == -->
 
