--- a/app/index.html
+++ b/app/index.html
@@ -651,7 +651,47 @@
                     </div>
                     <!-- == -->
 
+                    <!-- Subtitle -->
+                    <div class="row text-lg-center">
+                        <h1 class="bilder__subtitle">
+                            BESUCHER DIESER SEITE SUCHTEN AUCH OFT NACH:
+                        </h1>
+                    </div>
+                    <!-- == -->
                     
+
+                    <!-- Items -->
+                    <div class="row">
+                        <div class="col-6 col-sm-4 bilder__column">
+                            <div class="alert bilder__alert bg-info bg-gradient text-lg-center">
+                                GLYKOLWANNEN
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 bilder__column">
+                            <div class="alert bilder__alert bg-info bg-gradient text-lg-center">
+                                WASSERAUFBEREITUNG
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 bilder__column">
+                            <div class="alert bilder__alert bg-info bg-gradient text-lg-center">
+                                ROHRLEITUNGSBAU
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-6 col-sm-4 bilder__column">
+                            <div class="alert bilder__alert bg-info bg-gradient text-lg-center">
+                                Wärmemengenmessungen
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 bilder__column">
+                            <div class="alert bilder__alert bg-info bg-gradient text-lg-center">
+                                ANLAGELEASING
+                            </div>
+                        </div>
+                    </div>
+                    <!-- == -->
 
                 </div>
             </section>
