--- a/app/index.html
+++ b/app/index.html
@@ -482,7 +482,7 @@
                                             </div>
 
                                             <p class="hauptmerkmale__block-info">
-                                                Kompakteinheiten mit <span> integrierten Pumpen, Drucktanks, Filtern, 
+                                                Kompakteinheiten mit <span> integrierten Pumpen, Drucktanks, Filtern,
                                                     Steuerungen</span> (optional mit Reservepumpe)
                                             </p>
                                         </li>
@@ -527,7 +527,8 @@
                                             </div>
 
                                             <p class="hauptmerkmale__block-info">
-                                                <span>Scroll, Multiscroll</span> und <span>Schraubenkompressoren</span>  (optional  
+                                                <span>Scroll, Multiscroll</span> und <span>Schraubenkompressoren</span>
+                                                (optional
                                                 mit Frequenzumrichter) erhältlich
                                             </p>
                                         </li>
@@ -538,7 +539,7 @@
                                             </div>
 
                                             <p class="hauptmerkmale__block-info">
-                                                <span>Automatische Leistungssteuerung</span> für Prozesse mit   
+                                                <span>Automatische Leistungssteuerung</span> für Prozesse mit
                                                 variabler Kühllast
                                             </p>
                                         </li>
@@ -549,7 +550,7 @@
                                             </div>
 
                                             <p class="hauptmerkmale__block-info">
-                                                <span>Kleine Kältemittelvolumen</span> dank extrakompakter 
+                                                <span>Kleine Kältemittelvolumen</span> dank extrakompakter
                                                 Bauweise
                                             </p>
                                         </li>
@@ -560,7 +561,7 @@
                                             </div>
 
                                             <p class="hauptmerkmale__block-info">
-                                                Auswahl aus <span>verschiedenen Low-GWP Kältemitteln, u.a. 
+                                                Auswahl aus <span>verschiedenen Low-GWP Kältemitteln, u.a.
                                                     R513a, R1234ze und R290 (Propan)</span>
                                             </p>
                                         </li>
@@ -571,7 +572,7 @@
                                             </div>
 
                                             <p class="hauptmerkmale__block-info">
-                                               Mit <span>automatischen Glykol Nachfüllsystemem</span>
+                                                Mit <span>automatischen Glykol Nachfüllsystemem</span>
                                             </p>
                                         </li>
 
@@ -591,7 +592,8 @@
                                             </div>
 
                                             <p class="hauptmerkmale__block-info">
-                                                <span>Erhöhte Betriebssicherheit mit bis zu 4 Kühlkreisläufen</span> pro Maschine
+                                                <span>Erhöhte Betriebssicherheit mit bis zu 4 Kühlkreisläufen</span> pro
+                                                Maschine
                                             </p>
                                         </li>
                                     </ul>
@@ -623,30 +625,36 @@
 
                         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner bilder__inner">
-                              <div class="carousel-item bilder__item active">
-                                <img src="./images/slide.png" class="d-block" alt="image">
-                              </div>
-                              <div class="carousel-item bilder__item">
-                                <img src="./images/slide.png" class="d-block" alt="image">
-                              </div>
-                              <div class="carousel-item bilder__item">
-                                <img src="./images/slide.png" class="d-block" alt="image">
-                              </div>
+                                <div class="carousel-item bilder__item active">
+                                    <img src="./images/slide.png" class="d-block" alt="image">
+                                </div>
+                                <div class="carousel-item bilder__item">
+                                    <img src="./images/slide.png" class="d-block" alt="image">
+                                </div>
+                                <div class="carousel-item bilder__item">
+                                    <img src="./images/slide.png" class="d-block" alt="image">
+                                </div>
                             </div>
                             <div class="bilder__nav">
                                 <div class="carousel-indicators bilder__indicators">
-                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="bilder__dots active" aria-current="true" aria-label="Slide 1"></button>
-                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="bilder__dots" aria-label="Slide 2"></button>
-                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="bilder__dots" aria-label="Slide 3"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        data-bs-slide-to="0" class="bilder__dots active" aria-current="true"
+                                        aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        data-bs-slide-to="1" class="bilder__dots" aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators"
+                                        data-bs-slide-to="2" class="bilder__dots" aria-label="Slide 3"></button>
                                 </div>
-                                <button class="btn bg-primary bilder__btn" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <button class="btn bg-primary bilder__btn" type="button"
+                                    data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                                     <img src="./images/arrow-left.png" alt="arrow">
                                 </button>
-                                <button class="btn bg-primary bilder__btn" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <button class="btn bg-primary bilder__btn" type="button"
+                                    data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                                     <img src="./images/arrow-right.png" alt="arrow">
                                 </button>
                             </div>
-                          </div>
+                        </div>
 
                     </div>
                     <!-- == -->
@@ -658,7 +666,7 @@
                         </h1>
                     </div>
                     <!-- == -->
-                    
+
 
                     <!-- Items -->
                     <div class="row">
@@ -696,6 +704,55 @@
                 </div>
             </section>
             <!--  -->
+
+            <!-- Termin Section -->
+            <section class="termin bg-primary" id="termin">
+
+                <div class="termin__line"></div>
+
+                <div class="container">
+
+                    <div class="row termin__row">
+                        <div class="col-md-5">
+                            <h1 class="termin__title">
+                                Jetzt Termin vereinbaren!
+                            </h1>
+                        </div>
+
+                        <div class="col-md-5">
+                            <div class="termin__info">
+                                <p class="termin__info-paragraph">
+                                    Gerne stehen wir Ihnen für eine individuelle Beratung telefonisch und vor Ort zur
+                                    Verfügung und freuen
+                                    uns über Ihre Kontaktaufnahme. Sprechen Sie uns an!
+                                </p>
+
+                                <p class="termin__info-paragraph">
+                                    Fragen Sie nach einem Rückruf oder kontaktieren Sie uns unter: 
+                                    <span>
+                                        <a class="termin__info-paragraph_link" href="mailto:info@elsasser-technik.de">info@elsasser-technik.de</a>
+                                    </span>
+                                </p>
+
+                                <button class="btn bg-info bg-gradient termin__info-btn text-lg-center">
+                                    <img class="termin__info-btn_image" src="./images/arrow.png" alt="arrow">
+                                    Kontakt
+                                </button>
+
+                            </div>
+                        </div>
+                        <div class="col-md-2 d-flex">
+                            <a class="termin__logo" href="/">
+                                <img class="termin__logo-img" src="./images/logo-inverted.png" alt="logo">
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="termin__line"></div>
+            </section>
+            <!-- == -->
 
         </main>
         <!-- == -->
