--- a/app/index.html
+++ b/app/index.html
@@ -728,9 +728,10 @@
                                 </p>
 
                                 <p class="termin__info-paragraph">
-                                    Fragen Sie nach einem Rückruf oder kontaktieren Sie uns unter: 
+                                    Fragen Sie nach einem Rückruf oder kontaktieren Sie uns unter:
                                     <span>
-                                        <a class="termin__info-paragraph_link" href="mailto:info@elsasser-technik.de">info@elsasser-technik.de</a>
+                                        <a class="termin__info-paragraph_link"
+                                            href="mailto:info@elsasser-technik.de">info@elsasser-technik.de</a>
                                     </span>
                                 </p>
 
@@ -758,7 +759,67 @@
         <!-- == -->
 
         <!-- Footer -->
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-3 footer__item">
+                        <h3 class="footer__item-title">Elsässer Kältetechnik</h3>
+                        <p class="footer__item-info">
+                            Königsallee 14
+                        </p>
+                        <p class="footer__item-info">
+                            40212 Düsseldorf
+                        </p>
+                    </div>
+
+                    <div class="col-3 footer__item d-flex flex-column align-items-lg-center">
+                        <div class="flex-wrapp">
+                            <h3 class="footer__item-title">Kontakt</h3>
+                            <p class="footer__item-info">
+                                Telefon:
+                                <span>
+                                    <a class="footer__item-info_tel" href="tel:+49021192323052">+49 (0) 211 9232 3052</a>
+                                </span>
+                            </p>
+                            <p class="footer__item-info">
+                                Email:
+                                <span>
+                                    <a class="footer__item-info_email"
+                                        href="mailto:info@elsasser-technik.de">info@elsasser-technik.de</a>
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-3 footer__item d-flex flex-column align-items-lg-end">
+                        <div class="flex-wrapp">
+                            <h3 class="footer__item-title">
+                                Shortlinks
+                            </h3>
+                            <p class="footer__item-info">
+                                <a class="footer__item-info_shortlinks" href="#">Kontakt</a>
+                            </p>
+                            <p class="footer__item-info">
+                                <a class="footer__item-info_shortlinks" href="#">Rückruf vereinbaren</a>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-3 footer__item d-flex flex-column align-items-lg-end justify-content-end">
+                        <div class="flex-wrapp">
+                            <p class="footer__item-info">
+                                <a class="footer__item-info_shortlinks" href="#">Impressum</a>
+                            </p>
+                            <p class="footer__item-info">
+                                <a class="footer__item-info_shortlinks" href="#">Datenschutz</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </footer>
     </div>
 
     <script src="js/script.min.js"></script>
