temperature section adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -234,6 +234,62 @@
 
                 </section>
                 <!-- == -->
+
+                <!-- Temperature Section -->
+                <section class="temperature" id="temperature">
+                    <div class="container-fluid">
+
+                        <div class="container">
+
+                            <!-- Info Content -->
+                            <div class="row temperature__content">
+                                <div class="col-md-6">
+
+                                    <div class="temperature__content-block">
+
+                                        <h1 class="temperature__content-title">
+                                            <p class="temperature__content-paragraph">
+                                                Unsere Spezialität besteht aus
+                                            </p>
+                                            <p class="temperature__content-paragraph">
+                                                unseren Kaltwassersätzen mit
+                                            </p>
+                                            <p class="temperature__content-paragraph">
+                                                integrierter Freikühleinheit.
+                                            </p>
+                                        </h1>
+
+                                        <div class="temperature__content-info mt-3">
+                                            <p class="temperature__content-text">
+                                                Doppelkanal Mikrochannel Wärmetauscher kühlen das Prozesswasser
+                                                energiesparend
+                                                über ambiente Umgebungsluft
+                                            </p>
+
+                                            <p class="temperature__content-text">
+                                                <span>Nur bei heißen Außentemperaturen erfolgt die Umschaltung auf
+                                                    Kompressionskälteerzeugung. Diese Maximierung der Freikühlzeit erzielt
+                                                    größtmögliche Kosteneinsparungen
+                                                </span> <br> auch bei kleinen Nennleistungen.
+                                            </p>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+                            </div>
+                            <!-- == -->
+
+                        </div>
+
+
+                        <!-- Image -->
+                        <img class="temperature__image" src="./images/IconHotToCold.png" alt="image">
+                        <!-- == -->
+
+                    </div>
+                </section>
+                <!-- == -->
     
             </main>
             <!-- == -->
