termin section adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -740,6 +740,56 @@
                     </div>
                 </section>
                 <!--  -->
+
+                <!-- Termin Section -->
+                <section class="termin bg-primary" id="termin">
+
+                    <div class="termin__line"></div>
+
+                    <div class="container">
+
+                        <div class="row termin__row">
+                            <div class="col-md-5">
+                                <h1 class="termin__title">
+                                    Jetzt Termin vereinbaren!
+                                </h1>
+                            </div>
+
+                            <div class="col-md-5">
+                                <div class="termin__info">
+                                    <p class="termin__info-paragraph">
+                                        Gerne stehen wir Ihnen für eine individuelle Beratung telefonisch und vor Ort zur
+                                        Verfügung und freuen
+                                        uns über Ihre Kontaktaufnahme. Sprechen Sie uns an!
+                                    </p>
+
+                                    <p class="termin__info-paragraph">
+                                        Fragen Sie nach einem Rückruf oder kontaktieren Sie uns unter:
+                                        <span>
+                                            <a class="termin__info-paragraph_link"
+                                                href="mailto:info@elsasser-technik.de">info@elsasser-technik.de</a>
+                                        </span>
+                                    </p>
+
+                                    <button class="btn bg-info bg-gradient termin__info-btn text-lg-center">
+                                        <img class="termin__info-btn_image" src="./images/arrow.png" alt="arrow">
+                                        Kontakt
+                                    </button>
+
+                                </div>
+                            </div>
+                            <div class="col-md-2 d-flex">
+                                <a class="termin__logo" href="/">
+                                    <img class="termin__logo-img" src="./images/logo-inverted.png" alt="logo">
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="termin__line"></div>
+                </section>
+                <!-- == -->
     
             </main>
             <!-- == -->
