--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container">
 
                 <!-- Logo -->
-                <a class="navbar-brand" href="/">
+                <a class="navbar-brand" href="https://max-tsymba.github.io/test-frontend/">
                     <img src="images/logo.png" alt="logo">
                 </a>
                 <!-- == -->
@@ -779,7 +779,7 @@
                                 </div>
                             </div>
                             <div class="col-md-2 d-flex">
-                                <a class="termin__logo" href="/">
+                                <a class="termin__logo" href="https://max-tsymba.github.io/test-frontend/">
                                     <img class="termin__logo-img" src="./images/logo-inverted.png" alt="logo">
                                 </a>
                             </div>
